@@ -5,16 +5,14 @@ AUX xmlrpc-c-1.32.05-Wimplicit.patch 593 SHA256 9a39a6d1c01c8fe1dc2d6673d35da136
 DIST xmlrpc-c-1.28.03.tar.gz 751969 SHA256 6bc078a7fa7ea41bce40df490b0a670f9014678566acef3cd1ea0ce605fee422 SHA512 e729cad61de76ab38e234e3f2db0c6a8a45423fae992a7fe0c6e6e9f887fc89d08104ce1c7b4920a2f8089f919daf29cc2174a4951dd6868aeb838ee8a30abff WHIRLPOOL 3440aed117feeda88f2feaeac39869c7d3dc9bce76cee5ab1f0a989ccad31921e93ad1ed0d1590e415c05079d6c0951206f64010564c92afa356d1ef457be3d6
 DIST xmlrpc-c-1.32.05.tar.gz 769040 SHA256 cefd25dcb90556c90358cb44013a644f1aeafd37d2e18be37e66a3355b5ae0d2 SHA512 40813ad97010684e346ce4f286d9d7314547572f8681cf99d4c3c36cb7aa38b1cb72b84d63ab46e44282dc2bd95b85dbb022e3039700caa939469c6f7bf08d1f WHIRLPOOL 1e6ebbc1b3caa78e1e22210d81a61b74d71f61a33d1ea97f96ef250a5277d3cbe6d532d286bed8bb57e1ba4ccb54fd38bdf51f8d3bdbba00225bb5678de17292
 EBUILD xmlrpc-c-1.28.03-r1.ebuild 2760 SHA256 3645abf9b5507e201d3d48e981557500142241b02f416653ead998ea8d00edc3 SHA512 58c356c2657eac39284e4a870904536628379ac5160928739e600b11d921af73ed4f3fd22a8b6299bc83a64d5086238cfbfd77231b56ed0ed6301f00bff6e7d2 WHIRLPOOL ec7e4dd0f7ec6db08125c7b4034211d6c1c32987cdebaf9023e9b854ffdf18fb85be4e96651a3271acffb7a6e83bc5b27f0482202799b4c2145fca00b544de03
-EBUILD xmlrpc-c-1.32.05-r1.ebuild 3078 SHA256 d6afc02dbcfa9d6a88ebe239d3dce85ab1d685a7337432036a77bd3d45d2a771 SHA512 f2fc51a7f2e4ce00eae2f6ab914ecd76511fa1ebe9449a13606d74ab5cccb3ba446b6198d3d908c06d573b7c84fe3c3d0e3e777992069f5d241abe69aa9af5f2 WHIRLPOOL 758d97f4ff074e330ca388efec318be0f9f7bbb7d006fcc404e7a2fbd7e4287585833f7c9f51192bd41e67c4646e19cc031cf75e95cf1779b63a3fb35da003dd
+EBUILD xmlrpc-c-1.32.05-r1.ebuild 3076 SHA256 783c3681176f7342f6a5837b46e2ecd9da55948c42894d9c472502410c1725ba SHA512 b2a660bc58ea66efe5392bad8331f83bb7ea1396997987ef4c19b0c61e052a777497b62d47b0a0cfa05bb5ee6e3a6e1ee6963d691a84d72a0061f2ce93806aea WHIRLPOOL d64742e258893307258064f012c649db1623e1c3d09afdfc8516545da07d5c4e4847d83686c0d3523e4a8d812aaf256b7cd5b9ce57f78a85c00315854885e2e9
 EBUILD xmlrpc-c-1.32.05.ebuild 2907 SHA256 358f254ecbfdcb6b9dcb23181a1d94f3c883b643fd013d2f2d33ef60fb4a2f17 SHA512 210ea0656425aa9b1c14d9e8aee5646ea20b470f793d79ed1f32bf6ee0b8c2431319465d1589d83aa3277c39a5e2618f66d690323f9db24ed71008512565c61a WHIRLPOOL bec664433edfb37fab3a7dee01af7e570abc824350b4373f3d8d4810ca1daec471554495d70455c9aaad01a16e0716a8cdbe08503e7c0a9b60e1fa51b515b22a
-MISC ChangeLog 22663 SHA256 236e88ecde83ceb76c332bef5977073360932b4a1c8f115260f5f1af800d3fd1 SHA512 b3eb07f857aa60fb171d97ab18649a678a765fc2abcfdbaf357c68563e68654ecd6648939a7d43cb704d233db2b6903895cacaa66359e4f8aebb6d0f0add74ea WHIRLPOOL af20fbf64c6179a1a133c7de940072583f5ed15661417e7aac6442f8655f4162a059949f8b31f59b5b758b336ff596386a7c4385010f03f1e14df58c1a607116
+MISC ChangeLog 22785 SHA256 933c9ae44a7e064c2237631f716f52980f21b6d7a3c316bf62bdfd1b22261dcb SHA512 d7e1ab54e7d62988386d28550e93dda8c187b47ac3bacbcb32f1da1a6e12d160688278f55a31b4abdaa1b39baf17df750aaf05d5f0920e0442f8c8b326f86c40 WHIRLPOOL bf7e921513fd21b3352f905ee6b6bce9b9ee4e9e3753478300fe2719bfc0e6c3bd94aa6e3bc9a01ef2fbfbc5a2d6e6a16ebf9a184b9692b5a6973a231ca3d2db
 MISC metadata.xml 671 SHA256 531ee5a34812e8c17d0786aebb7da992ec0c79c4d7c03f80b204fdd5e7013011 SHA512 2636519b3565a53daded955eb79dd8546738860a7fbb2ecc4d4a793c19d796bb54578bbb1fe7b84cae39980c875d5adef81e64ddb59d3852617f0bd13816a5f9 WHIRLPOOL 90aaf5ba34d0ad054a488d9724e5d3717752357e2ab873fb2dbbc2a6c095f299c6efb158245ea5a9b75b668fbe1b7d743fc95a2eca296a1e3fa8e329b67d33b5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlG43hwACgkQG9wOWsQutdbWUgP/W+9pk6x3SJYiVOtAnxUNmViz
-czk9NcY+lTmIPL+2tttgwMtlcwE+Huc0RgANC47RA0+YFZhZYvyV+mYWxFQ7eKAl
-uwYni4QgxITtqvi1bPM1NCkDyEyQOpkE2VYqFsefQR56cefrXF5WcgAVlPtpJhpD
-9rgLoRQlBwOdATwIoTA=
-=nxS9
+iEYEAREIAAYFAlG9fEUACgkQWunnsum7y6j9XACdGZ0CPcWIt9bxoAv6xa+rDZL6
+SQAAnjZ3WF100pY+tLa9M/MkDnijiIEE
+=ORoM
 -----END PGP SIGNATURE-----
