@@ -15,16 +15,12 @@ EBUILD gitolite-3.3.ebuild 1982 SHA256 b6faa6493946507d43ce77aa375054dce641f9421
 EBUILD gitolite-3.4.ebuild 1982 SHA256 d3d79a0d2747eee3af67740cc32c3a8575b6f1595c2130df68c7a203edf56376 SHA512 290193aca0fc47e55f8bd284a1384ba1668dc5c2311184db2ac2097ffa81e5f446945ed097c1a5857fdda8e4700ccc9ed036a5235035d3dfc0fc978fdefa2640 WHIRLPOOL ababd0127abf046007406ab29c2ccfbe51f8cd7e8266f0e77f6a5d73999d074fce1e43c24eefdcb33a1f514e95a1fb7768a2a1b99e0e75af5dc708df3f193c23
 EBUILD gitolite-3.5.1.ebuild 1984 SHA256 6040ab4d18eaeb255e33c1f76d3b30ab39168c495eb00658a36560e9256391db SHA512 e78ece313965a9de089dd3a84ff496d25669d45352d3eab9f2b79807942cb717f6f169df8fb925c69ef4edbfcf79eb6726bd03658224bdc76dc26363ca261e3c WHIRLPOOL 6eeb458392e6468a63ef5f6502b4abf9c0504e405950f84c12e0fefb463bc51437045bd27a09fd3dfd23eabc5af6714829bb5324572cb0581550fff2e526b908
 EBUILD gitolite-3.5.ebuild 1982 SHA256 6e4b555474ffbbfedd0d29ca0551be712554d9c49019c389484825fc8dc1fade SHA512 f73262336538a00cf1a1ace70040125b163a9749430be1fe738a0559914dc912f9dc0f88af4cbc8fed3ee4784ed28c12b58aa0ffb1b83e2227d7f7709ed99ba7 WHIRLPOOL cdfcb50f541c62e3947d50a4abccc8540afbf00a52ec60fbf276001e7339f580b3848ea557319d3add558bdee8d00ef68d5bbb4a45653dfd2b6193a0832dd636
-MISC ChangeLog 4988 SHA256 c60149abd0389428436f6735efd1f2baec9b2b11450dfddb45351c2bebd0434b SHA512 ac988b5ffe947ff691a4173065ee049565c3699094cb92324a288043f58455f7739ae8e0c70054b1b0361dc694aa2efe4c8fa5cf51c24c189a9558ab750f499a WHIRLPOOL 7fe743f3eb18ed158b79e9391d856222988b457ef2b460b8789f006d861761f7c4439ea62ad81d7dc8c42eb61cbeae2692b1b601a000f3ebe1606028c6a2c61e
-MISC metadata.xml 779 SHA256 b4ffa2d440bbd0bad5a09952ae8b0240b7056ad2773cd36c617d89ac0b589e8b SHA512 119a713d329854b20633d292fddd5e38f2292a81c76de4fe776cb06168ba03a2bde59b954b5453ec5232645516a62b2d0a2ec68ad27f9d011dbc309ebd1d123a WHIRLPOOL 1abe55643411d0c9a0750d221784ecd085916a3f806af052b6c5c8dc93844bed9897400535545d387697663cd1bec73b37f7fbc25956d517583eef156b945cf7
+MISC ChangeLog 5065 SHA256 9f63467989186daa067bb6cd7cee69470477bfc3ffc992ef6a253642fb602c01 SHA512 f4cb79d67df0bc03dd190ac9c315de925d8277cce31b911ba1502f7f9b1a803866b6bbb9413226005b59e782c3ef95d40389213bace5aef89edcbeb418fe2c3c WHIRLPOOL 9387e1912942348bb710145036cb9e0e59638f6faf548513483ee52ab4be8dfe37e5bd93c7ed79e0169fd807419b70a1b7a09cc8ec3af82b8d3673ed1023d4f3
+MISC metadata.xml 682 SHA256 18d0866ea7ff65085f758309dcd2d624558e5324ac754ecdb3db0a7c0153dbc7 SHA512 6ebad19229eed70cb9c53dc11ae850eb376bb7d58c0d039bd3f12d9a8d0d4ebdf749b28ee601dfefa2e6e9b9bc4d37bbed7da56b787fa87f0720ed199110f401 WHIRLPOOL 002c556a8b8276910a815ee5e387820fd7d5f575012edbc11503303d846397cad43a5cfa6e762b312728ba6cbbf2fabfc9f7251ec783f1c21272db84429b122a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRaQwoAAoJEEqz6FtPBkyjVPMH/2HqeIzJDUvVF1oklPonYeyc
-F9DYlkLJWW7L4MgiXj+kvq22odHFVdehSOvwHSa1Q6OrANe4GHKrSCsBVZPWOB02
-QxPcI2PmSq0OoedngLGYb/ryrEpyQHoakD5oPMWMyxYHU7e/QBkx6TzLAs41SA7U
-sIcrz4yI/1gir4j+r//RExDuuwU8+yobVlgdu930wfokpaSrqThvU2lqSXsr3Sld
-9H26VqET7suPZqkAIjswcGn+QALywWrc19zWbtu2jzy7qhCAdHtQ/ciom5mEmcKx
-1h8q9CPKX0rqtmloyYZlEJyoMRqTFGE7ivkldMSsgoPUL4OseJJeEcCbxRVdr7I=
-=1CtZ
+iEYEAREIAAYFAlG9hHwACgkQCaWpQKGI+9R+KwCaA0Bz298WlRNnW6JnofL/d+MY
+kpYAn3De+rpUCppPRJRpnwMqYebn4W7m
+=I+ou
 -----END PGP SIGNATURE-----
